# echo_bot

./: README.md
bot/: Dockerfile  docker-compose.yaml  pyproject.toml  settings.py
bot/api/: main.py  tg.py
bot/resources/: pika.py
bot/schemas/: bot.py
bot/services/: message.py
consumer/: .gitignore  Dockerfile  main.py  pyproject.toml  settings.py
consumer/resources/: pika.py
consumer/services/: message.py  message_translate.py
