[tool.poetry]
name = "echo-bot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
pika = "^1.3.1"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
