[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pika = "^1.3.1"
uvicorn = "^0.20.0"
requests = "^2.28.1"
vk-api = "^11.9.9"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
